[gd_scene load_steps=8 format=2]

[ext_resource path="res://resources/font/BD_Cartoon_Shout.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/Themes/ui_theme1.tres" type="Theme" id=2]
[ext_resource path="res://scenes/others/confirmDialog.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect2:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect2:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect2:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect2:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("ColorRect2/Control:rect_position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -960, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("ColorRect2/Control:rect_position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 540, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=3]
resource_name = "intro"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect2:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect2:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect2:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect2:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.588235, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("ColorRect2/Control:rect_position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -960, -0.25, 0, 0.25, 0, 960, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("ColorRect2/Control:rect_position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 540, -0.25, 0, 0.25, 0, 540, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="Animation" id=4]
resource_name = "outro"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect2:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect2:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect2:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect2:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0.588235, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("ColorRect2/Control:rect_position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 960, -0.25, 0, 0.25, 0, 2916, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("ColorRect2/Control:rect_position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 540, -0.25, 0, 0.25, 0, 540, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[node name="confirm" type="CanvasLayer"]
pause_mode = 2
layer = 20
visible = false
script = ExtResource( 3 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
color = Color( 0, 0, 0, 0 )

[node name="Control" type="Control" parent="ColorRect2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = 540.0
margin_right = -960.0
margin_bottom = 540.0

[node name="ColorRect" type="PanelContainer" parent="ColorRect2/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -546.5
margin_top = -200.0
margin_right = 546.5
margin_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="ColorRect2/Control/ColorRect"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1073.0
margin_bottom = 380.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 540, 180 )
custom_constants/margin_right = 100
custom_constants/margin_top = 50
custom_constants/margin_left = 105
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect2/Control/ColorRect/MarginContainer"]
margin_left = 105.0
margin_top = 50.0
margin_right = 953.0
margin_bottom = 310.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 60
alignment = 1

[node name="Label" type="Label" parent="ColorRect2/Control/ColorRect/MarginContainer/VBoxContainer"]
margin_right = 848.0
margin_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 1618, -369 )
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "Return to main menu"
align = 1
valign = 1

[node name="ok" type="HBoxContainer" parent="ColorRect2/Control/ColorRect/MarginContainer/VBoxContainer"]
visible = false
margin_top = 128.0
margin_right = 780.0
margin_bottom = 260.0
custom_constants/separation = 81
alignment = 1

[node name="okBtn" type="Button" parent="ColorRect2/Control/ColorRect/MarginContainer/VBoxContainer/ok"]
modulate = Color( 0.54902, 1, 0.176471, 1 )
margin_left = 375.0
margin_right = 560.0
margin_bottom = 132.0
focus_mode = 0
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "OK"

[node name="confirm" type="HBoxContainer" parent="ColorRect2/Control/ColorRect/MarginContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 848.0
margin_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 81
alignment = 1

[node name="cancel" type="Button" parent="ColorRect2/Control/ColorRect/MarginContainer/VBoxContainer/confirm"]
modulate = Color( 0.94902, 0.223529, 0.223529, 1 )
margin_right = 358.0
margin_bottom = 132.0
focus_mode = 0
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "cancel"

[node name="confirm" type="Button" parent="ColorRect2/Control/ColorRect/MarginContainer/VBoxContainer/confirm"]
modulate = Color( 0.54902, 1, 0.176471, 1 )
margin_left = 439.0
margin_right = 847.0
margin_bottom = 132.0
focus_mode = 0
theme = ExtResource( 2 )
enabled_focus_mode = 0
text = "Confirm"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/RESET = SubResource( 2 )
anims/intro = SubResource( 3 )
anims/outro = SubResource( 4 )

[connection signal="pressed" from="ColorRect2/Control/ColorRect/MarginContainer/VBoxContainer/ok/okBtn" to="." method="_on_okBtn_pressed"]
[connection signal="pressed" from="ColorRect2/Control/ColorRect/MarginContainer/VBoxContainer/confirm/cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="ColorRect2/Control/ColorRect/MarginContainer/VBoxContainer/confirm/confirm" to="." method="_on_confirm_pressed"]
